cambios sincronizacion, mejora de envio de ordenes

--- a/Proyecto Netbeans/ManNa/nbproject/project.properties
+++ b/Proyecto Netbeans/ManNa/nbproject/project.properties
@@ -36,6 +36,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
+file.reference.jersey-media-multipart-2.5.1.jar=lib\\jersey-media-multipart-2.5.1.jar
+file.reference.mimepull-1.9.3.jar=lib\\mimepull-1.9.3.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar=lib/mysql-connector-java-5.1.39-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -50,7 +52,9 @@ javac.classpath=\
     ${libs.restlib.classpath}:\
     ${file.reference.gson-2.8.2.jar}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.39-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
+    ${file.reference.jersey-media-multipart-2.5.1.jar}:\
+    ${file.reference.mimepull-1.9.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
