--- a/Proyecto Android/ManNa_v6/app/build.gradle
+++ b/Proyecto Android/ManNa_v6/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.0"
     defaultConfig {
         applicationId "com.example.nacho.manna"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 6
-        versionName "6.1"
+        versionName "6.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -22,15 +22,29 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    implementation'com.android.support:appcompat-v7:26.+'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1+'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.android.support:appcompat-v7:27.+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:26.+'
-    implementation 'com.android.support:support-v4:26.+'
+    implementation 'com.android.support:design:27.+'
+    // implementation'com.android.support:appcompat-v7:26.+'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    // implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //  implementation 'com.android.support:design:26.+'
+    //   implementation 'com.android.support:support-v4:26.+'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'junit:junit:4.12'
-    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'org.apache.httpcomponents:httpcore:4.4'
+    //  compile 'dev.dworks.libs:volleyplus:+'
+
+    implementation 'com.github.chrisbanes:PhotoView:1.2.6'
+
+    implementation 'com.android.support:support-annotations:27.0.2'
+    implementation 'com.squareup.picasso:picasso:2.1.2'
+    implementation 'com.android.support:support-annotations:27.0.2'
+    implementation files('libs/volleyplus-0.1.4-sources.jar')
+    implementation files('libs/droidText.0.4.jar')
 }
