--- a/Proyecto Android/ManNa_v6/app/src/main/AndroidManifest.xml
+++ b/Proyecto Android/ManNa_v6/app/src/main/AndroidManifest.xml
@@ -10,85 +10,68 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name="com.example.nacho.manna.aplication.AppController"
+        android:name=".aplication.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <provider
-            android:name="com.example.nacho.manna.proveedorDeContenido.ProveedorContenido"
+            android:name=".proveedorDeContenido.ProveedorContenido"
             android:authorities="com.example.nacho.manna.proveedorDeContenido.ProveedorContenido"
             android:enabled="true"
             android:exported="true" />
 
         <activity
-            android:name="com.example.nacho.manna.activity.SplashActivity"
+            android:name=".activity.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
-            android:name="com.example.nacho.manna.activity.MainActivityDrawer"
+            android:name=".activity.MainActivityDrawer"
             android:configChanges="screenSize|orientation"
             android:label="@string/title_activity_drawe"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
-            android:name="com.example.nacho.manna.activity.AyudaActivity"
+            android:name=".activity.AyudaActivity"
             android:configChanges="screenSize|orientation"
-            android:parentActivityName="com.example.nacho.manna.activity.MainActivityDrawer">
+            android:parentActivityName=".activity.MainActivityDrawer">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.nacho.manna.activity.SplashActivity" />
         </activity>
-
         <activity
-            android:name="com.example.nacho.manna.activity.AutorActivity"
+            android:name=".activity.AutorActivity"
             android:configChanges="screenSize|orientation"
-            android:parentActivityName="com.example.nacho.manna.activity.MainActivityDrawer">
+            android:parentActivityName=".activity.MainActivityDrawer">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.nacho.manna.activity.MainActivityDrawer" />
         </activity>
-
         <activity
-            android:name="com.example.nacho.manna.activity.CrearOrdenActivity"
+            android:name=".activity.CrearOrdenActivity"
             android:configChanges="screenSize|orientation"
-            android:parentActivityName="com.example.nacho.manna.activity.MainActivityDrawer">
+            android:parentActivityName=".activity.MainActivityDrawer">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.nacho.manna.activity.MainActivityDrawer" />
         </activity>
-
         <activity
-            android:name="com.example.nacho.manna.activity.DescripcionOrdenActivity"
+            android:name=".activity.DescripcionOrdenActivity"
             android:configChanges="screenSize|orientation"
             android:finishOnTaskLaunch="true"
-            android:parentActivityName="com.example.nacho.manna.activity.MainActivityDrawer">
-
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.nacho.manna.activity.MainActivityDrawer" />
-        </activity>
-
-        <activity
-            android:name="com.example.nacho.manna.activity.OrdenGeneradaActivity"
-            android:configChanges="screenSize|orientation"
-            android:parentActivityName="com.example.nacho.manna.activity.MainActivityDrawer">
+            android:parentActivityName=".activity.MainActivityDrawer">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
@@ -96,20 +79,29 @@
                 android:value="com.example.nacho.manna.activity.MainActivityDrawer" />
         </activity>
         <activity
-            android:name="com.example.nacho.manna.activity.VerOrdenesActivity"
+            android:name=".activity.OrdenGeneradaActivity"
             android:configChanges="screenSize|orientation"
-            android:parentActivityName="com.example.nacho.manna.activity.MainActivityDrawer">
+            android:parentActivityName=".activity.MainActivityDrawer">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.nacho.manna.activity.MainActivityDrawer" />
         </activity>
-
         <activity
-            android:name="com.example.nacho.manna.activity.EditOrdenActivity"
+            android:name=".activity.VerOrdenesActivity"
             android:configChanges="screenSize|orientation"
-            android:parentActivityName="com.example.nacho.manna.activity.MainActivityDrawer"
+            android:parentActivityName=".activity.MainActivityDrawer">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.nacho.manna.activity.MainActivityDrawer" />
+        </activity>
+        <activity
+            android:name=".activity.EditOrdenActivity"
+            android:configChanges="screenSize|orientation"
+            android:parentActivityName=".activity.MainActivityDrawer"
             android:theme="@style/AppTheme.NoActionBar">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
@@ -118,9 +110,19 @@
                 android:value="com.example.nacho.manna.activity.VerOrdenesActivity" />
         </activity>
         <activity
-            android:name="com.example.nacho.manna.activity.VerUsuariosActivity"
+            android:name=".activity.VerUsuariosActivity"
             android:configChanges="screenSize|orientation"
-            android:parentActivityName="com.example.nacho.manna.activity.MainActivityDrawer">
+            android:parentActivityName=".activity.MainActivityDrawer">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.nacho.manna.activity.MainActivityDrawer" />
+        </activity>
+        <activity
+            android:name=".activity.CrearUsuarioActivity"
+            android:configChanges="screenSize|orientation"
+            android:parentActivityName=".activity.MainActivityDrawer">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
@@ -129,31 +131,28 @@
         </activity>
 
         <activity
-            android:name="com.example.nacho.manna.activity.CrearUsuarioActivity"
-            android:configChanges="screenSize|orientation"
-            android:parentActivityName="com.example.nacho.manna.activity.MainActivityDrawer">
+            android:name=".activity.EditUsuarioActivity"
+            android:configChanges="screenSize|orientation" />
+
+        <activity
+            android:name=".activity.LoginActivity"
+            android:configChanges="screenSize|orientation" />
+
+        <activity
+            android:name=".activity.VerImagen"
+            android:label="@string/title_activity_ver_imagen"
+            android:parentActivityName=".activity.MainActivityDrawer"
+            android:theme="@style/AppTheme.NoActionBar">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.nacho.manna.activity.MainActivityDrawer" />
-        </activity>
-
-        <activity
-            android:name="com.example.nacho.manna.activity.EditUsuarioActivity"
-            android:configChanges="screenSize|orientation">
-
-
-        </activity>
-
-        <activity
-            android:name="com.example.nacho.manna.activity.LoginActivity"
-            android:configChanges="screenSize|orientation">
 
         </activity>
 
         <service
-            android:name="com.example.nacho.manna.authenticator.AuthenticatorService"
+            android:name=".authenticator.AuthenticatorService"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
@@ -164,7 +163,7 @@
                 android:resource="@xml/authenticator" />
         </service>
         <service
-            android:name="com.example.nacho.manna.sync.SyncService"
+            android:name=".sync.SyncService"
             android:exported="false"
             android:process=":sync">
             <intent-filter>
@@ -175,6 +174,7 @@
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/syncadapter" />
         </service>
+
 
     </application>
 
