--- a/Proyecto Android/ManNa_v6/app/build.gradle
+++ b/Proyecto Android/ManNa_v6/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 6
-        versionName "6.2"
+        versionName "6.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -28,18 +28,14 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:27.+'
-    // implementation'com.android.support:appcompat-v7:26.+'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    // implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    //  implementation 'com.android.support:design:26.+'
-    //   implementation 'com.android.support:support-v4:26.+'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'junit:junit:4.12'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.android.volley:volley:1.1.0'
-    implementation 'org.apache.httpcomponents:httpcore:4.4'
+    // implementation 'com.android.volley:volley:1.1.0'
+    /*implementation 'org.apache.httpcomponents:httpcore:4.4'*/
 
-    //  compile 'dev.dworks.libs:volleyplus:+'
+    implementation 'dev.dworks.libs:volleyplus:+'
 
     implementation 'com.github.chrisbanes:PhotoView:1.2.6'
 
