--- a/Proyecto Netbeans/ManNa/nbproject/private/private.properties
+++ b/Proyecto Netbeans/ManNa/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=tomcat70:home=C:\\xampp\\tomcat
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\Nacho\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
